[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Enemies/Snake-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemies/Snake.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "MoveLeft"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "MoveRight"
length = 1.4

[sub_resource type="Animation" id=3]
resource_name = "Roll"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 8.43363

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.15375
height = 30.8175

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.2625
height = 2.47509

[sub_resource type="CircleShape2D" id=7]
radius = 9.06324

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.075
height = 28.7251

[sub_resource type="CircleShape2D" id=9]
radius = 9.28212

[node name="Snake" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MoveLeft = SubResource( 1 )
anims/MoveRight = SubResource( 2 )
anims/Roll = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RollCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="SlitherCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.846 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( -17.8, 5.562 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="HitboxRoll" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="HitboxRoll" index="0"]
shape = SubResource( 7 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -1, 4 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource( 8 )

[node name="HurtboxRoll" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtboxRoll" index="0"]
shape = SubResource( 9 )
disabled = true

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="HurtboxRoll" to="." method="_on_HurtboxRoll_area_entered"]

[editable path="Hitbox"]

[editable path="HitboxRoll"]

[editable path="Hurtbox"]

[editable path="HurtboxRoll"]
